Fixes inefficient use of Boolean constructor reported by FindBugs.
git-svn-id: https://svn.java.net/svn/quaqua~svn/trunk@333 27033605-f84b-e38a-ee46-f9c4a41192e5